--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -1,3 +1,24 @@
 
-pipeline {agent nonestages {stage('Test') {agent { label 'nodejs-app' }steps {container('nodejs') {echo 'Hello World!' sh 'node --version'}}}stage('Build and Push Image') {when {beforeAgent truebranch 'master'}steps {echo "TODO - build and push image"} } }} 
-
+ pipeline {
+               agent none
+               stages {
+                              stage('Test') {
+                              agent { label 'nodejs-app' }
+                                             steps {
+                                                            container('nodejs') {
+                                                                           echo 'Hello World!'   
+                                                                           sh 'node --version'
+                                                            }
+                                             }
+                              }
+                              stage('Build and Push Image') {
+                                             when {
+                                                            beforeAgent true
+                                                            branch 'master'
+                                             }
+                                             steps {
+                                                            echo "TODO - build and push image"
+                                             }                             
+                              }              
+    }
+}
