--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -25,11 +25,13 @@
         beforeAgent true
         branch 'master'
       }
-      options {
-        timeout(time: 30, unit: 'SECONDS') 
+       options {
+        timeout(time: 60, unit: 'SECONDS') 
       }
       input {
-        message "Should we continue?"
+        message "Should we deploy?"
+        submitter "Cratylus"
+        submitterParameter "APPROVER"
       }
       steps {
         echo "Continuing with deployment"
