--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -45,6 +45,10 @@
       steps {
         echo "Continuing with deployment - approved by ${APPROVER}"
       }
+       post {
+        success {
+          slackSend "${JOB_NAME} pipeline job is awaiting approval at: ${RUN_DISPLAY_URL}"
+        }
     }
     }
 }
