--- a/nodejs-app/Jenkinsfile.template
+++ b/nodejs-app/Jenkinsfile.template
@@ -12,12 +12,14 @@
                                              }
                               }
                               stage('Build and Push Image') {
+                                            agent any
                                              when {
                                                             beforeAgent true
                                                             branch 'master'
                                              }
                                              steps {
                                                             echo "TODO - build and push image"
+                                                            unstash 'app'
                                              }                             
                               } 
                                   stage('Deploy') {
